--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ __pycache__/
 # C extensions
 *.so
 
+# pdf/doc/docx/jpg/jpeg/xlsx/csv
+*.pdf
+*.doc
+*.docx
+*.jpg
+*.jpeg
+*.xlsx
+*.csv
+
 # Distribution / packaging
 .Python
 build/
